# StageParser

./: LICENSE  README.md  pyproject.toml
scripts/: add_videoscreen.py
src/stageparser/: __init__.py  api.py  cli.py  models.py  parser.py
